first version, basic structure of files with basic html with minimal things

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </nav>
     </header>
-    <section class="image-editor hide flex justify-evenly align-items-center">
+    <section class="image-editor flex justify-evenly align-items-center">
         <canvas class="edit-item canvas-container" id="canvas" height="500px" width="500px">
 
         </canvas>
@@ -27,7 +27,7 @@
 
         </div>
     </section>
-    <section class="images-gallery flex flex-column">
+    <section class="images-gallery hide flex flex-column">
         <div class="gallery-item menu-area flex justify-evenly">
             <input class="menu-area-item search-photo-input" type="search" placeholder="searce">
             <div class="menu-area-item choose-from-txt"> a lot of text comes here in white</div>
