added: gallery-controller and galleri-service with render-gallery and more functions, the css addited with grid area for the gallery

--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
             </div>
         </nav>
     </header>
-    <section class="image-editor flex justify-evenly align-items-center">
+    <section class="image-editor hide flex justify-evenly align-items-center">
         <canvas class="edit-item canvas-container" id="canvas" height="500px" width="500px">
 
         </canvas>
-        <div class="edit-item edit-section">
+        <div class="edit-item flex flex-column align-items-center justify-evenly edit-section">
+            <input class="text-editor-input" type="text" oninput="onTxtInput(this.value)" placeholder="Edit text here">
 
         </div>
     </section>
-    <section class="images-gallery hide flex flex-column">
+    <section class="images-gallery flex justify-evenly flex-column">
         <div class="gallery-item menu-area flex justify-evenly">
             <input class="menu-area-item search-photo-input" type="search" placeholder="searce">
             <div class="menu-area-item choose-from-txt"> a lot of text comes here in white</div>
@@ -37,7 +38,6 @@
         </div>
 
     </section>
-
     <footer>
     </footer>
 
@@ -45,7 +45,9 @@
     <script src="/js/services/storage-service.js"></script>
     <script src="/js/meme-services/meme-service.js"></script>
     <script src="/js/meme-services/meme-canvas-service.js"></script>
+    <script src="/js/gallery-services/gallery-service.js"></script>
     <script src="/js/meme-controller.js"></script>
+    <script src="/js/gallery-controller.js"></script>
 </body>
 
 </html>
