--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </nav>
     </header>
-    <section class="image-editor hide flex justify-evenly align-items-center">
+    <section class="main-container meme-editor hide flex justify-evenly align-items-center">
         <canvas class="edit-item canvas-container" id="canvas" height="500px" width="500px">
 
         </canvas>
@@ -28,7 +28,7 @@
 
         </div>
     </section>
-    <section class="images-gallery flex justify-evenly flex-column">
+    <section class="main-container images-gallery align-items-center flex justify-evenly flex-column">
         <div class="gallery-item menu-area flex justify-evenly">
             <input class="menu-area-item search-photo-input" type="search" placeholder="searce">
             <div class="menu-area-item choose-from-txt"> a lot of text comes here in white</div>
@@ -45,7 +45,6 @@
     <script src="/js/services/storage-service.js"></script>
     <script src="/js/meme-services/meme-service.js"></script>
     <script src="/js/meme-services/meme-canvas-service.js"></script>
-    <script src="/js/gallery-services/gallery-service.js"></script>
     <script src="/js/meme-controller.js"></script>
     <script src="/js/gallery-controller.js"></script>
 </body>
