--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
             <input class="text-editor-input" type="text" oninput="onTxtInput(this.value)" placeholder="Edit text here">
             <div class="update-text-stracture flex">
                 <button class="switch-line">
-                    <img src="img/ICONS/up-and-down-opposite-double-arrows-side-by-side.png" class="style-icon"
+                    <img src="../img/ICONS/up-and-down-opposite-double-arrows-side-by-side.png" class="style-icon"
                         width="40px">
                 </button>
-                <button class="add-line">
-                    <img src="img/ICONS/add.png" class="style-icon" width="40px">
+                <button class="add-line" onclick="onAddLine()">
+                    <img src="../img/ICONS/add.png" class="style-icon" width="40px">
                 </button>
             </div>
             <div class="text-style-editor">
                 <label>
-                    <img src="img/ICONS/paint-board-and-brush.png" class="style-icon" width="40px">
+                    <img src="../img/ICONS/paint-board-and-brush.png" class="style-icon" width="40px">
                     <input type="color" name="color" style="display: none;" onchange="onSetColor(this.value)">
                 </label>
                 <label>
-                    <img src="img/ICONS/increase font - icon.png" onclick="onChangeFontSize(1)" class="style-icon"
+                    <img src="../img/ICONS/increase font - icon.png" onclick="onChangeFontSize(1)" class="style-icon"
                         width="40px">
                 </label>
                 <label>
-                    <img src="img/ICONS/decrease font - icon.png" onclick="onChangeFontSize(-1)" class="style-icon"
+                    <img src="../img/ICONS/decrease font - icon.png" onclick="onChangeFontSize(-1)" class="style-icon"
                         width="40px">
                 </label>
             </div>
