added: much better css design, bugs fixe

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
             </div>
             <div class="text-style-editor grid">
-                <label class="label-style-icon">
+                <label class="label-style-icon increase-font">
                     <img src="./img/ICONS/increase font - icon.png" onclick="onChangeFontSize(1)" class="style-icon">
                 </label>
-                <label class="label-style-icon">
+                <label class="label-style-icon decrease-font">
                     <img src="./img/ICONS/decrease font - icon.png" onclick="onChangeFontSize(-1)" class="style-icon">
                 </label>
-                <label class="label-style-icon">
+                <label class="label-style-icon align-to-left">
                     <img src="./img/ICONS/align-to-left.png" onclick="onAlignText('left')" class="style-icon">
                 </label>
-                <label class="label-style-icon">
+                <label class="label-style-icon align-center">
                     <img src="./img/ICONS/center-text-alignment.png" onclick="onAlignText('center')" class="style-icon">
                 </label>
-                <label class="label-style-icon">
+                <label class="label-style-icon align-to-right">
                     <img src="./img/ICONS/align-to-right.png" onclick="onAlignText('right')" class="style-icon">
                 </label>
                 <select name="font" class="fonts" onchange="onChangeFont(this.value)">
