added:  bugs fixde

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <div class="menu-second-section flex align-items-center justify-between">
                 <div class="menu-area-item choose-from-txt"> a lot of text comes here in white</div>
                 <button class="menu-area-item more-btn">More</button>
+                <button class="menu-area-item" onclick="">Im flexible!</button>
             </div>
             
         </div>
