added: hamburger and much responsive design, ui and ux better, add save to storage,

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input class="text-editor-input" type="text" oninput="onTxtInput(this.value)" placeholder="Edit text here">
             <div class="update-text-stracture-btns flex justify-evenly">
                 <button class="text-stracture-btn switch-lines " onclick="onSwitchLines()">
-                    <img src="img/ICONS/up-and-down-arrows.png" class="text-stracture-icon">
+                    <img src="./img/ICONS/up-and-down-arrows.png" class="text-stracture-icon">
                 </button>
                 <button class="text-stracture-btn add-line" onclick="onAddLine()">
                     <img src="./img/ICONS/add-button.png" class="text-stracture-icon">
