--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     </footer>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js" integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="./js/services/utils.js"></script> -->
+    <script src="./js/services/utils.js"></script>
     <script src="./js/services/storage-service.js"></script>
     <script src="./js/meme-services/meme-service.js"></script>
     <script src="./js/meme-services/meme-canvas-service.js"></script>
