--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <li onclick="onAddEmoji(this)">❤️</li>
             </ul>
             <div class="update-text-stracture-btns flex justify-evenly">
+                <button class="text-stracture-btn drag-down" onclick="onDragLine(2)">
+                    <img src="./img/ICONS/down.png" title="Drag down" class="text-stracture-icon">
+                </button>
+                <button class="text-stracture-btn drag-up" onclick="onDragLine(-2)">
+                    <img src="./img/ICONS/up.png" title="Drag up" class="text-stracture-icon">
+                </button>
                 <button class="text-stracture-btn switch-lines" title="Switch lines" onclick="onSwitchLines()">
                     <img src="./img/ICONS/up-and-down-arrows.png" class="text-stracture-icon">
                 </button>
