--- a/index.html
+++ b/index.html
@@ -140,22 +140,37 @@
     <section class="saved-memes-container flex justify-evenly hide">
 
     </section>
-    <footer class="flex flex-column align-items-center justify-between">
+    <footer class="flex align-items-center justify-center">
+        <img src="./img/ICONS/WhatsApp Image 2022-10-31 at 09.14.16.jpeg" width="85" class="my-photo" alt="">
+        
+        <div class="flex flex-column justify-center align-items-center">
             <small class="p-container">
                 &#9400; This site developed by Boaz Deri, find me here
             </small>
-            <div class="flex icons-container">
-                <a href="https://www.facebook.com/boazderi/">
+            
+            <div class="flex icons-container justify-evenly align-items-center">
+                <a href="https://www.linkedin.com/in/boaz-deri/" target="_blank">
                     <div class="icon">
-                        <img class="facebook-icon" src="./img/ICONS/facebook.svg" width="30px" height="30px" alt="">
+                        <img class="linkedin-icon img-icon" src="./img/ICONS/linkedin.png" width="30px" height="30px" alt="">
                     </div>
                 </a>
-                <a href="https://twitter.com/boaz_deri">
+                <a href="https://www.facebook.com/boazderi/" target="_blank">
                     <div class="icon">
-                        <img class="twitter-icon" src="./img/ICONS/twitter.svg" width="30px" height="30px" alt="">
+                        <img class="facebook-icon img-icon" src="./img/ICONS/facebook.png" width="30px" height="30px" alt="">
+                    </div>
+                </a>
+                <a href="https://twitter.com/boaz_deri" target="_blank">
+                    <div class="icon">
+                        <img class="twitter-icon img-icon" src="./img/ICONS/twitter.png" width="30px" height="30px" alt="">
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/boazderi/" target="_blank">
+                    <div class="icon">
+                        <img class="instagram-icon img-icon " src="./img/ICONS/instagram.png" width="30px" height="30px" alt="">
                     </div>
                 </a>
             </div>
+        </div>
     </footer>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js" integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="./js/services/utils.js"></script> -->
